--- a/static/index.html
+++ b/static/index.html
@@ -41,6 +41,9 @@
       <div class="row">
 
         <div class="col-8">
+          <div class="spinner-border" style="width: 13rem; height: 13rem;" role="status">
+            <span class="sr-only">Loading...</span>
+          </div>
           <div id="canvas-bag"></div>
           <div class="sliders">
             <input type="range" id="noise" name="noise" min="0" max="100">
