--- a/static/index.html
+++ b/static/index.html
@@ -28,8 +28,31 @@
           </div>
           <div id="canvas-bag"></div>
           <div class="sliders">
-            <input type="range" id="noise" name="noise" min="0" max="100">
-            <label for="noise"><span id="noise-label"></span>% Noise</label>
+
+            <div class="input-group">
+              <div class="input-group-prepend">
+                <div class="input-group-text">
+                  <input type="checkbox" id="noise-enabled">
+                </div>
+              </div>
+              <div class="input-group-append">
+                <input type="range" id="noise" name="noise" min="0" max="100">
+                <label for="noise"><span id="noise-label"></span>% Noise</label>
+              </div>
+            </div>
+
+            <div class="input-group">
+              <div class="input-group-prepend">
+                <div class="input-group-text">
+                  <input type="checkbox" id="grid-enabled">
+                </div>
+              </div>
+              <div class="input-group-append">
+                <input type="range" id="grid-size" name="grid-size" min="1" max="14">
+                <label for="grid-size">Grid Size: <span id="grid-size-label"></span></label>
+              </div>
+            </div>
+
           </div>
         </div>
 
