Added a "wipe" transform.

--- a/static/index.html
+++ b/static/index.html
@@ -53,6 +53,18 @@
               </div>
             </div>
 
+            <div class="input-group">
+              <div class="input-group-prepend">
+                <div class="input-group-text">
+                  <input type="checkbox" id="wipe-enabled">
+                </div>
+              </div>
+              <div class="input-group-append">
+                <input type="range" id="wipe-perc" name="wipe-perc" min="0" max="100">
+                <label for="wipe-perc"><span id="wipe-perc-label"></span>% Wipe</label>
+              </div>
+            </div>
+
           </div>
         </div>
 
