--- a/static/index.html
+++ b/static/index.html
@@ -32,7 +32,7 @@
             <div class="input-group">
               <div class="input-group-prepend">
                 <div class="input-group-text">
-                  <input type="checkbox" id="noise-enabled">
+                  <input type="radio" id="noise-enabled">
                 </div>
               </div>
               <div class="input-group-append">
@@ -44,24 +44,48 @@
             <div class="input-group">
               <div class="input-group-prepend">
                 <div class="input-group-text">
-                  <input type="checkbox" id="grid-enabled">
+                  <input type="radio" id="grid-enabled">
                 </div>
               </div>
               <div class="input-group-append">
-                <input type="range" id="grid-size" name="grid-size" min="1" max="14">
-                <label for="grid-size">Grid Size: <span id="grid-size-label"></span></label>
+                <input type="range" id="grid" name="grid" min="2" max="14">
+                <label for="grid">Grid Size: <span id="grid-label"></span></label>
               </div>
             </div>
 
             <div class="input-group">
               <div class="input-group-prepend">
                 <div class="input-group-text">
-                  <input type="checkbox" id="wipe-enabled">
+                  <input type="radio" id="wipe-enabled">
                 </div>
               </div>
               <div class="input-group-append">
-                <input type="range" id="wipe-perc" name="wipe-perc" min="0" max="100">
-                <label for="wipe-perc"><span id="wipe-perc-label"></span>% Wipe</label>
+                <input type="range" id="wipe" name="wipe" min="0" max="100">
+                <label for="wipe"><span id="wipe-label"></span>% Wipe</label>
+              </div>
+            </div>
+
+            <div class="input-group">
+              <div class="input-group-prepend">
+                <div class="input-group-text">
+                  <input type="radio" id="invert-enabled">
+                </div>
+              </div>
+              <div class="input-group-append">
+                <!-- <input type="range" id="invert" name="invert" min="50" max="150"> -->
+                <label for="invert">Inversion<span id="invert-label"></span></label>
+              </div>
+            </div>
+
+            <div class="input-group">
+              <div class="input-group-prepend">
+                <div class="input-group-text">
+                  <input type="radio" id="washout-enabled">
+                </div>
+              </div>
+              <div class="input-group-append">
+                <input type="range" id="washout" name="washout" min="0" max="100">
+                <label for="washout"><span id="washout-label"></span>% washout</label>
               </div>
             </div>
 
