--- a/static/index.html
+++ b/static/index.html
@@ -27,6 +27,9 @@
             <span class="sr-only">Loading...</span>
           </div>
           <div id="canvas-bag"></div>
+
+          <br/>
+
           <div class="sliders">
 
             <div class="input-group">
@@ -65,17 +68,17 @@
               </div>
             </div>
 
-            <div class="input-group">
+            <!-- <div class="input-group">
               <div class="input-group-prepend">
                 <div class="input-group-text">
                   <input type="radio" id="invert-enabled">
                 </div>
               </div>
               <div class="input-group-append">
-                <!-- <input type="range" id="invert" name="invert" min="50" max="150"> -->
+                <input type="range" id="invert" name="invert" min="50" max="150">
                 <label for="invert">Inversion<span id="invert-label"></span></label>
               </div>
-            </div>
+            </div> -->
 
             <div class="input-group">
               <div class="input-group-prepend">
@@ -86,6 +89,18 @@
               <div class="input-group-append">
                 <input type="range" id="washout" name="washout" min="0" max="100">
                 <label for="washout"><span id="washout-label"></span>% washout</label>
+              </div>
+            </div>
+
+            <div class="input-group">
+              <div class="input-group-prepend">
+                <div class="input-group-text">
+                  <input type="radio" id="swirl-enabled">
+                </div>
+              </div>
+              <div class="input-group-append">
+                <input type="range" id="swirl" name="swirl" min="0" max="100">
+                <label for="swirl"><span id="swirl-label"></span> swirl</label>
               </div>
             </div>
 
