Added rotation xform

--- a/static/index.html
+++ b/static/index.html
@@ -104,6 +104,18 @@
               </div>
             </div>
 
+            <div class="input-group">
+              <div class="input-group-prepend">
+                <div class="input-group-text">
+                  <input type="radio" id="rotate-enabled">
+                </div>
+              </div>
+              <div class="input-group-append">
+                <input type="range" id="rotate" name="rotate" min="0" max="360">
+                <label for="rotate"><span id="rotate-label"></span> rotate</label>
+              </div>
+            </div>
+
           </div>
         </div>
 
