Got Mel Spectrograms showing in browser.

--- a/static/speech.html
+++ b/static/speech.html
@@ -30,93 +30,93 @@
 
           <br/>
 
-          <div class="sliders">
+          <!--<div class="sliders">-->
 
-            <div class="input-group">
-              <div class="input-group-prepend">
-                <div class="input-group-text">
-                  <input type="radio" id="noise-enabled">
-                </div>
-              </div>
-              <div class="input-group-append">
-                <input type="range" id="noise" name="noise" min="0" max="100">
-                <label for="noise"><span id="noise-label"></span>% Noise</label>
-              </div>
-            </div>
+            <!--<div class="input-group">-->
+              <!--<div class="input-group-prepend">-->
+                <!--<div class="input-group-text">-->
+                  <!--<input type="radio" id="noise-enabled">-->
+                <!--</div>-->
+              <!--</div>-->
+              <!--<div class="input-group-append">-->
+                <!--<input type="range" id="noise" name="noise" min="0" max="100">-->
+                <!--<label for="noise"><span id="noise-label"></span>% Noise</label>-->
+              <!--</div>-->
+            <!--</div>-->
 
-            <div class="input-group">
-              <div class="input-group-prepend">
-                <div class="input-group-text">
-                  <input type="radio" id="grid-enabled">
-                </div>
-              </div>
-              <div class="input-group-append">
-                <input type="range" id="grid" name="grid" min="2" max="14">
-                <label for="grid">Grid Size: <span id="grid-label"></span></label>
-              </div>
-            </div>
+            <!--<div class="input-group">-->
+              <!--<div class="input-group-prepend">-->
+                <!--<div class="input-group-text">-->
+                  <!--<input type="radio" id="grid-enabled">-->
+                <!--</div>-->
+              <!--</div>-->
+              <!--<div class="input-group-append">-->
+                <!--<input type="range" id="grid" name="grid" min="2" max="14">-->
+                <!--<label for="grid">Grid Size: <span id="grid-label"></span></label>-->
+              <!--</div>-->
+            <!--</div>-->
 
-            <div class="input-group">
-              <div class="input-group-prepend">
-                <div class="input-group-text">
-                  <input type="radio" id="wipe-enabled">
-                </div>
-              </div>
-              <div class="input-group-append">
-                <input type="range" id="wipe" name="wipe" min="0" max="100">
-                <label for="wipe"><span id="wipe-label"></span>% Wipe</label>
-              </div>
-            </div>
+            <!--<div class="input-group">-->
+              <!--<div class="input-group-prepend">-->
+                <!--<div class="input-group-text">-->
+                  <!--<input type="radio" id="wipe-enabled">-->
+                <!--</div>-->
+              <!--</div>-->
+              <!--<div class="input-group-append">-->
+                <!--<input type="range" id="wipe" name="wipe" min="0" max="100">-->
+                <!--<label for="wipe"><span id="wipe-label"></span>% Wipe</label>-->
+              <!--</div>-->
+            <!--</div>-->
 
-            <!-- <div class="input-group">
-              <div class="input-group-prepend">
-                <div class="input-group-text">
-                  <input type="radio" id="invert-enabled">
-                </div>
-              </div>
-              <div class="input-group-append">
-                <input type="range" id="invert" name="invert" min="50" max="150">
-                <label for="invert">Inversion<span id="invert-label"></span></label>
-              </div>
-            </div> -->
+            <!--&lt;!&ndash; <div class="input-group">-->
+              <!--<div class="input-group-prepend">-->
+                <!--<div class="input-group-text">-->
+                  <!--<input type="radio" id="invert-enabled">-->
+                <!--</div>-->
+              <!--</div>-->
+              <!--<div class="input-group-append">-->
+                <!--<input type="range" id="invert" name="invert" min="50" max="150">-->
+                <!--<label for="invert">Inversion<span id="invert-label"></span></label>-->
+              <!--</div>-->
+            <!--</div> &ndash;&gt;-->
 
-            <div class="input-group">
-              <div class="input-group-prepend">
-                <div class="input-group-text">
-                  <input type="radio" id="washout-enabled">
-                </div>
-              </div>
-              <div class="input-group-append">
-                <input type="range" id="washout" name="washout" min="0" max="100">
-                <label for="washout"><span id="washout-label"></span>% washout</label>
-              </div>
-            </div>
+            <!--<div class="input-group">-->
+              <!--<div class="input-group-prepend">-->
+                <!--<div class="input-group-text">-->
+                  <!--<input type="radio" id="washout-enabled">-->
+                <!--</div>-->
+              <!--</div>-->
+              <!--<div class="input-group-append">-->
+                <!--<input type="range" id="washout" name="washout" min="0" max="100">-->
+                <!--<label for="washout"><span id="washout-label"></span>% washout</label>-->
+              <!--</div>-->
+            <!--</div>-->
 
-            <div class="input-group">
-              <div class="input-group-prepend">
-                <div class="input-group-text">
-                  <input type="radio" id="swirl-enabled">
-                </div>
-              </div>
-              <div class="input-group-append">
-                <input type="range" id="swirl" name="swirl" min="0" max="100">
-                <label for="swirl"><span id="swirl-label"></span> swirl</label>
-              </div>
-            </div>
+            <!--<div class="input-group">-->
+              <!--<div class="input-group-prepend">-->
+                <!--<div class="input-group-text">-->
+                  <!--<input type="radio" id="swirl-enabled">-->
+                <!--</div>-->
+              <!--</div>-->
+              <!--<div class="input-group-append">-->
+                <!--<input type="range" id="swirl" name="swirl" min="0" max="100">-->
+                <!--<label for="swirl"><span id="swirl-label"></span> swirl</label>-->
+              <!--</div>-->
+            <!--</div>-->
 
-            <div class="input-group">
-              <div class="input-group-prepend">
-                <div class="input-group-text">
-                  <input type="radio" id="rotate-enabled">
-                </div>
-              </div>
-              <div class="input-group-append">
-                <input type="range" id="rotate" name="rotate" min="0" max="360">
-                <label for="rotate"><span id="rotate-label"></span> rotate</label>
-              </div>
-            </div>
+            <!--<div class="input-group">-->
+              <!--<div class="input-group-prepend">-->
+                <!--<div class="input-group-text">-->
+                  <!--<input type="radio" id="rotate-enabled">-->
+                <!--</div>-->
+              <!--</div>-->
+              <!--<div class="input-group-append">-->
+                <!--<input type="range" id="rotate" name="rotate" min="0" max="360">-->
+                <!--<label for="rotate"><span id="rotate-label"></span> rotate</label>-->
+              <!--</div>-->
+            <!--</div>-->
 
-          </div>
+          <!--</div>-->
         </div>
 
         <div class="col-4">
@@ -154,6 +154,7 @@
     <script src="/static/lib/jquery/dist/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="/static/lib/bootstrap/dist/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.9.1/d3.min.js"></script>
 
     <script src="/static/js/speech.js"></script>
 
