--- a/static/speech.html
+++ b/static/speech.html
@@ -30,19 +30,19 @@
 
           <br/>
 
-          <!--<div class="sliders">-->
+          <div class="sliders">
 
-            <!--<div class="input-group">-->
-              <!--<div class="input-group-prepend">-->
-                <!--<div class="input-group-text">-->
-                  <!--<input type="radio" id="noise-enabled">-->
-                <!--</div>-->
-              <!--</div>-->
-              <!--<div class="input-group-append">-->
-                <!--<input type="range" id="noise" name="noise" min="0" max="100">-->
-                <!--<label for="noise"><span id="noise-label"></span>% Noise</label>-->
-              <!--</div>-->
-            <!--</div>-->
+            <div class="input-group">
+              <div class="input-group-prepend">
+                <div class="input-group-text">
+                  <input type="radio" id="noise-enabled">
+                </div>
+              </div>
+              <div class="input-group-append">
+                <input type="range" id="noise" name="noise" min="0" max="100">
+                <label for="noise"><span id="noise-label"></span>% Noise</label>
+              </div>
+            </div>
 
             <!--<div class="input-group">-->
               <!--<div class="input-group-prepend">-->
@@ -68,7 +68,7 @@
               <!--</div>-->
             <!--</div>-->
 
-            <!--&lt;!&ndash; <div class="input-group">-->
+            <!--<div class="input-group">-->
               <!--<div class="input-group-prepend">-->
                 <!--<div class="input-group-text">-->
                   <!--<input type="radio" id="invert-enabled">-->
@@ -78,7 +78,7 @@
                 <!--<input type="range" id="invert" name="invert" min="50" max="150">-->
                 <!--<label for="invert">Inversion<span id="invert-label"></span></label>-->
               <!--</div>-->
-            <!--</div> &ndash;&gt;-->
+            <!--</div>-->
 
             <!--<div class="input-group">-->
               <!--<div class="input-group-prepend">-->
@@ -116,7 +116,7 @@
               <!--</div>-->
             <!--</div>-->
 
-          <!--</div>-->
+          </div>
         </div>
 
         <div class="col-4">
