I don't remember what I was doing here.

--- a/static/speech.html
+++ b/static/speech.html
@@ -44,17 +44,16 @@
               </div>
             </div>
 
-            <!--<div class="input-group">-->
-              <!--<div class="input-group-prepend">-->
-                <!--<div class="input-group-text">-->
-                  <!--<input type="radio" id="grid-enabled">-->
-                <!--</div>-->
-              <!--</div>-->
-              <!--<div class="input-group-append">-->
-                <!--<input type="range" id="grid" name="grid" min="2" max="14">-->
-                <!--<label for="grid">Grid Size: <span id="grid-label"></span></label>-->
-              <!--</div>-->
-            <!--</div>-->
+            <div class="input-group">
+              <div class="input-group-prepend">
+                <div class="input-group-text">
+                  <input type="radio" id="bgNoise-enabled">
+                </div>
+              </div>
+              <div class="input-group-append">
+                <label for="bgNoise-enabled">Background Noise</label>
+              </div>
+            </div>
 
             <!--<div class="input-group">-->
               <!--<div class="input-group-prepend">-->
