0-100 noise with sparsely connected CNN0-100 noise with sparsely connected CNN0-100 noise with sparsely connected CNN0-100 noise with sparsely connected CNN0-100 noise with sparsely connected CNN0-100 noise with sparsely connected CNN0-100 noise with sparsely connected CNN0-100 noise with sparsely connected CNN0-100 noise with sparsely connected CNN0-100 noise with sparsely connected CNN

--- a/static/mnist.html
+++ b/static/mnist.html
@@ -35,11 +35,11 @@
           <div class="container">
 
             <div class="row">
-              <div class="col model" id="denseCNN1">
-                <h2>Dense CNN</h2>
-                <h3 id="denseCNN1-score"></h3>
+              <div class="col model" id="sparseCNN1">
+                <h2>Sparsely Connected CNN</h2>
+                <h3 id="sparseCNN1-score"></h3>
                 <div class="progress">
-                  <div id="denseCNN1-progress" class="progress-bar" role="progressbar" style="width: 0%"></div>
+                  <div id="sparseCNN1-progress" class="progress-bar" role="progressbar" style="width: 0%"></div>
                 </div>
               </div>
             </div>
@@ -50,16 +50,6 @@
                 <h4 id="noise-label"></h4>
               </div>
             </div>
-
-            <!--<div class="row">-->
-              <!--<div class="col model" id="sparseCNN1">-->
-                <!--<h2>SparseNet</h2>-->
-                <!--<h3 id="sparseCNN1-score"></h3>-->
-                <!--<div class="progress">-->
-                  <!--<div id="sparseCNN1-progress" class="progress-bar" role="progressbar" style="width: 0%"></div>-->
-                <!--</div>-->
-              <!--</div>-->
-            <!--</div>-->
 
           </div>
 
