--- a/static/mnist.html
+++ b/static/mnist.html
@@ -18,7 +18,7 @@
 
     <h1>Noisy MNIST SparseNet Demo</h1>
 
-    <div id="scoreboard" class="container">
+    <div class="container">
 
       <div class="row">
 
@@ -26,97 +26,10 @@
           <div class="spinner-border" style="width: 13rem; height: 13rem;" role="status">
             <span class="sr-only">Loading...</span>
           </div>
-          <div id="canvas-bag"></div>
+          <div id="dense-canvas-bag" class="canvas-bag"></div>
 
           <br/>
 
-          <div class="sliders">
-
-            <div class="input-group">
-              <div class="input-group-prepend">
-                <div class="input-group-text">
-                  <input type="radio" id="noise-enabled">
-                </div>
-              </div>
-              <div class="input-group-append">
-                <input type="range" id="noise" name="noise" min="0" max="100">
-                <label for="noise"><span id="noise-label"></span>% Noise</label>
-              </div>
-            </div>
-
-            <div class="input-group">
-              <div class="input-group-prepend">
-                <div class="input-group-text">
-                  <input type="radio" id="grid-enabled">
-                </div>
-              </div>
-              <div class="input-group-append">
-                <input type="range" id="grid" name="grid" min="2" max="14">
-                <label for="grid">Grid Size: <span id="grid-label"></span></label>
-              </div>
-            </div>
-
-            <div class="input-group">
-              <div class="input-group-prepend">
-                <div class="input-group-text">
-                  <input type="radio" id="wipe-enabled">
-                </div>
-              </div>
-              <div class="input-group-append">
-                <input type="range" id="wipe" name="wipe" min="0" max="100">
-                <label for="wipe"><span id="wipe-label"></span>% Wipe</label>
-              </div>
-            </div>
-
-            <!-- <div class="input-group">
-              <div class="input-group-prepend">
-                <div class="input-group-text">
-                  <input type="radio" id="invert-enabled">
-                </div>
-              </div>
-              <div class="input-group-append">
-                <input type="range" id="invert" name="invert" min="50" max="150">
-                <label for="invert">Inversion<span id="invert-label"></span></label>
-              </div>
-            </div> -->
-
-            <div class="input-group">
-              <div class="input-group-prepend">
-                <div class="input-group-text">
-                  <input type="radio" id="washout-enabled">
-                </div>
-              </div>
-              <div class="input-group-append">
-                <input type="range" id="washout" name="washout" min="0" max="100">
-                <label for="washout"><span id="washout-label"></span>% washout</label>
-              </div>
-            </div>
-
-            <div class="input-group">
-              <div class="input-group-prepend">
-                <div class="input-group-text">
-                  <input type="radio" id="swirl-enabled">
-                </div>
-              </div>
-              <div class="input-group-append">
-                <input type="range" id="swirl" name="swirl" min="0" max="100">
-                <label for="swirl"><span id="swirl-label"></span> swirl</label>
-              </div>
-            </div>
-
-            <div class="input-group">
-              <div class="input-group-prepend">
-                <div class="input-group-text">
-                  <input type="radio" id="rotate-enabled">
-                </div>
-              </div>
-              <div class="input-group-append">
-                <input type="range" id="rotate" name="rotate" min="0" max="360">
-                <label for="rotate"><span id="rotate-label"></span> rotate</label>
-              </div>
-            </div>
-
-          </div>
         </div>
 
         <div class="col-4">
@@ -125,7 +38,7 @@
 
             <div class="row">
               <div class="col model" id="denseCNN1">
-                <h2>Dense CNN</h2>
+                <h2>Densely Connected CNN</h2>
                 <h3 id="denseCNN1-score"></h3>
                 <div class="progress">
                   <div id="denseCNN1-progress" class="progress-bar" role="progressbar" style="width: 0%"></div>
@@ -133,9 +46,35 @@
               </div>
             </div>
 
+          </div>
+
+        </div>
+
+      </div>
+
+    </div>
+
+    <div id="sparse-scoreboard" class="container">
+
+      <div class="row">
+
+        <div class="col-8">
+          <div class="spinner-border" style="width: 13rem; height: 13rem;" role="status">
+            <span class="sr-only">Loading...</span>
+          </div>
+          <div id="sparse-canvas-bag" class="canvas-bag"></div>
+
+          <br/>
+
+        </div>
+
+        <div class="col-4">
+
+          <div class="container">
+
             <div class="row">
               <div class="col model" id="sparseCNN1">
-                <h2>SparseNet</h2>
+                <h2>Sparsely Connected CNN</h2>
                 <h3 id="sparseCNN1-score"></h3>
                 <div class="progress">
                   <div id="sparseCNN1-progress" class="progress-bar" role="progressbar" style="width: 0%"></div>
